--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,6 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+option(OPTION_RUN_DOXYGEN "Generate documentation with Doxygen" OFF)
+
 add_subdirectory(Vector)
